# photofold

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  photofold-video-presentation.html
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  (+1 more)
configs/: gate1.yaml
docs/: IMPLEMENTATION_PLAN.md  PHASE_1B_EXECUTION_PLAN.md  PHASE_1B_SPEC.md  PhotoFold_Demo_Script.md  PhotoFold_Developer_PRD.md  TECHNICAL_CONTRACTS.md
scripts/: check-contracts.mjs  curate_hdrplus.py  generate-contracts.mjs  prepare_phase1b_datasets.py  run-gate0.sh  run-gate3.sh
services/processor/: README.md  pyproject.toml
services/processor/src/photofold/: __init__.py  cli.py  config.py  contracts.py  dataset.py  doctor.py  health.py  main.py
services/processor/src/photofold/gate1/: __init__.py  alignment.py  benchmark.py  bundle.py  images.py  models.py  report.py  treatment.py
services/processor/src/photofold/phase1b/: __init__.py  aggregate.py  baseline.py  benchmark.py  datasets.py  experiment.py  models.py  report.py
services/processor/src/photofold/prototype/: __init__.py  models.py  runner.py
services/processor/tests/: test_dataset.py  test_doctor.py  test_health.py
services/processor/tests/integration/: test_gate1.py
services/processor/tests/phase1b/: test_aggregate.py  test_baseline.py  test_benchmark.py  test_datasets.py  test_experiment.py  test_scope.py
services/processor/tests/prototype/: test_alignment_fallback.py  test_runner.py
services/processor/tests/unit/: test_gate1_models.py
(+20 files in other folders)
