[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photofold-processor"
version = "0.1.0"
description = "PhotoFold deterministic processor foundation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.139.2",
  "numpy==2.3.5",
  "opencv-python-headless==4.13.0.92",
  "pillow==12.3.0",
  "pydantic==2.13.4",
  "python-multipart==0.0.32",
  "scikit-image==0.26.0",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.7.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[project.scripts]
photofold = "photofold.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
